<resources>
    <string name="app_name">dealcatch</string>
    <string name="title_activity_dashboard">Dealcatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="send_mail">Send Mail...</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="Login">Login</string>
    <string name="Favourites">Favourites</string>
    <string name="admin">Admin Pannel</string>
    <string name="Loading">Loading</string>
    <string name="no_internet">No Internet</string>
    <string name="No_deals_found">No Deal Found</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


    <string name="Imprint">Imprint</string>
    <string name="Yes">Yes</string>
    <string name="Favourites_Deals">Favourites Deals</string>
    <string name="Die_besten_Deals">Die besten Deals und Schnäpphchen</string>
    <string name="Wrong_Credentials">Wrong Credentials</string>
    <string name="Expires_in">Expires in: </string>
    <string name="error_likes">Error likes</string>
    <string name="Deleted">Deleted</string>
    <string name="cannot_be_empty">cannot be empty</string>
    <string name="You_are_no_Logged_In">You are no Logged In</string>
    <string name="want_to_delete_this_Deal">want to delete this Deal?</string>
    <string name="No">No</string>
    <string name="expired">expired</string>
    <string name="press_once_again">Press once again to exit!</string>
    <string name="Delete">Delete</string>
    <string name="no_email_app">No Email App Found</string>
    <string name="cat_deleted">Category Delete</string>
    <string name="all_deal_will_be_deleted">All Deals related to this category will be deleted Automatically</string>
    <string name="Delete_Category">Delete Category?</string>
    <string name="added_successfully">Added Successfully</string>
    <string name="No_details_found">No details found</string>
    <string name="Permission_Denied">Permission Denied</string>
    <string name="sub_cat_not">Subcategories not found</string>
    <string name="sending_notification">Sending Notification</string>
    <string name="deal_uploaded">Deal Uploaded</string>
    <string name="discount_price">Discount price must be smaller</string>
    <string name="Select_picture">Select Picture</string>
    <string name="Select_category">Select Category</string>
    <string name="Weak_password">Weak Password, atleast 6 charater required</string>
    <string name="Name">Name</string>
    <string name="Please_accept_our">Please accept our Terms &amp; condition</string>
    <string name="Register_Successfully">Register Successfully</string>
    <string name="Passwords_are_not_same">Passwords are not same</string>
    <string name="All_Fields_are_required">All Fields are required</string>
    <string name="Password_changed_successfully">Password changed successfully</string>
    <string name="Notifications_on">Notifications on</string>
    <string name="Notifications_off">Notifications off</string>
    <string name="Select">Select</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Cancel">Cancel</string>
    <string name="Settings">Settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Change_Password">Change Password</string>
    <string name="Already_Have">Already have an account?</string>
    <string name="Register">Register</string>
    <string name="Terms_and_Condiotns">Terms and Condiotns</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="us">us!</string>
    <string name="step_with">step with</string>
    <string name="your_first">your first</string>
    <string name="Heres">Here’s</string>
    <string name="Account">Account?</string>
    <string name="New_user">New user? Register Now</string>
    <string name="have_an">have an</string>
    <string name="Already">Already</string>
    <string name="Selcuk_Camuz">Selcuk Camuz</string>
    <string name="More_information">More information:</string>
    <string name="We_are_neither">We are neither obliged nor willing to participate in a dispute settlement procedure before a consumer arbitration board.</string>
    <string name="Platform_of_the">Platform of the EU Commission for online dispute resolution:</string>
    <string name="E_Mail">E-Mail:</string>
    <string name="Benderstr.">Benderstr.</string>
    <string name="Germany">Germany</string>
    <string name="Write_a_Comment">Write a Comment...</string>
    <string name="comments">comments</string>
    <string name="Posted_on">Posted_on: </string>
    <string name="Go_To_Deal">Go To Deal</string>
    <string name="Add_Category">Add Category</string>
    <string name="Active_Deals">Active Deals</string>
    <string name="Admin_DashBoard">Admin DashBoard</string>
    <string name="Add_New_Category">Add New Category</string>
    <string name="Categories">Categories</string>
    <string name="Submit">Submit</string>
    <string name="Discounted">Discounted</string>
    <string name="Select_Picture">Select Picture</string>
    <string name="Select_Date">Select Date</string>
    <string name="Select_Time">Select Time</string>
    <string name="Actual">Actual</string>
    <string name="Add_Deal">Add Deal</string>
    <string name="Description">Description</string>
    <string name="expirey_date">Expirey Date</string>
    <string name="expirey_time">Expirey Time</string>
    <string name="Category">Category</string>
    <string name="Price">Price</string>
    <string name="Attach_Pic">Attach Pic</string>
    <string name="linkk">Link</string>
    <string name="Data_Protection">Data Protection</string>
    <string name="Conditions">Conditions</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="contact_us">Contact Us</string>
    <string name="Dealcatchmemohala">dealcatch.de</string>
    <string name="fairnessretail">Member of the "Fairness in Retail" initiative.</string>


    <string name="link" translatable="false">https://dealcatch.de/dealcatchapp/</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Language">Language</string>
    <string name="Rate_us">Rate us</string>
    <string name="Ok">OK</string>
    <string name="thankyou_for_doing">Thank you for doing your registration at dealcatch,check email for account Confirmation</string>
    <string name="email_not_verified">email not verified</string>

</resources>